added RR & twisted Works page

--- a/bardot.html
+++ b/bardot.html
@@ -91,7 +91,6 @@
 
 <section class="challenge block-in" id="bardot-challenge">
   <h3>THE CHALLENGE</h3>
-  <div class="wrapper">
     <div class="block">
       <p>
         As a dedicated eCommerce website,
@@ -101,7 +100,6 @@
         aligned with the project milestones and budget.
       </p>
     </div>
-  </div>
 </section>
 
 <section id="bardot-home">
@@ -225,15 +223,15 @@
 </section>
 
 <section class="light-bg-f9f9f9" id="bardot-screenCollage">
+  <h4 class="block-in">Secondary Pages</h4>
   <div class="block-in">
     <img alt="user flow" src="./Assets/bardot-collage.png" />
   </div>
 </section>
 
 
-<section id="bardot-learnings">
+<section class="challenge" id="bardot-learnings">
   <h3 class="block-in">Project Conclusion</h3>
-  <div class="wrapper">
     <div class="block block-in">
       <p>
         The project involved many stakeholders. There were quite an amount of change requests and out-of-scope features.
@@ -243,20 +241,19 @@
         teams and stakeholders.
       </p>
     </div>
-  </div>
 </section>
 
 
 
 
 <section class="other-works">
-  <h2 class="block-in">Other Works</h2>
   <div class="work-tiles">
 
     <div class="work-tile block-in" >
       <div id="tile_schecker"></div>
       <a href="./scheckerIntro.html" class="tile-CTA">
-        <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
+        <img alt="Schecker Logo" src="./Assets/Schecker_logo.png" />
+        <p>An <i class="i-innovative">innovative</i> Healthcare App</p>
       </a>
     </div>
 
@@ -264,10 +261,13 @@
       <div id="tile_sa"></div>
       <a href="./sa.html" class="tile-CTA">
         <img alt="SA Logo" src="./Assets/logo_sa.png" />
+        <p>A fully <small style="font-weight:800;">cus</small><i class="i-customised">tOm<b>isEd</b></i> NGO's Website</p>
       </a>
     </div>
 
   </div>
+
+  <a class="all-works-link block-in" href="./works.html"><h5>I've got more</h5></a>
 </section>
 
 
