--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
         <div class="prj-des-contents">
           <h3 class="schecker-in-out">Experimental project - Schecker</h3>
             <p class="schecker-in-out">
-              A not yet existent all-in-1 Healthcare Platform that accompanies you through sickness.
+              A not yet existent all-in-1 Healthcare Platform that accompanies you through&nbsp;sickness.
             </p>
           <!-- CTA -->
-            <a class="CTA-button schecker-in-out" id="schecker-CTA" href="./scheckerIntro.html">
+            <a class="CTA-button schecker-in-out" id="schecker-CTA" target="_blank" href="./scheckerIntro.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
@@ -184,10 +184,10 @@
         <div class="prj-des-contents" id="prj-des-contents_bardot">
           <h3 class="bardot-in-out">Bardot</h3>
             <p class="bardot-in-out">
-            UX/UI optimisation and website re-design for one of the most Australia's iconic fashion brands.
+            UX/UI optimisation and website re-design for one of the most Australia's iconic fashion&nbsp;brands.
             </p>
           <!-- CTA -->
-            <a class="CTA-button bardot-in-out" id="bardot-CTA" href="./bardot.html">
+            <a class="CTA-button bardot-in-out" id="bardot-CTA" target="_blank" href="./bardot.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
@@ -214,10 +214,10 @@
         <div class="prj-des-contents" id="prj-des-contents_sa">
           <h3 class="sa-in-out">Standards Australia</h3>
             <p class="sa-in-out">
-              Visual website re-design for Australia's leading non-governmental, non-profit standards organisation.
+              Visual website re-design for Australia's leading non-governmental, non-profit standards&nbsp;organisation.
             </p>
           <!-- CTA -->
-            <a class="CTA-button sa-in-out" id="sa-CTA" href="./sa.html">
+            <a class="CTA-button sa-in-out" id="sa-CTA" target="_blank" href="./sa.html">
               <svg class="button-outline" width="188px" height="52px" viewBox="0 0 188 52">
                   <g stroke="none" stroke-width="2" fill="none" fill-rule="evenodd">
                       <g class="cta-btn-stroke" transform="translate(-780.000000, -669.000000)" fill-rule="nonzero" stroke="#0e83ea">
