--- a/sa.html
+++ b/sa.html
@@ -90,7 +90,6 @@
 
 <section class="challenge block-in" id="sa-challenge">
   <h3 class="block-in">THE CHALLENGE</h3>
-  <div class="wrapper">
     <div class="block">
       <p>
         As an informative NGO website, content display and hiarachy were very important.
@@ -98,7 +97,6 @@
         screen/viewport sizes as per client's requirements.
       </p>
     </div>
-  </div>
 </section>
 
 
@@ -198,18 +196,16 @@
 
 
 
-<section id="sa-learnings">
+<section class="challenge" id="sa-learnings">
   <h3 class="block-in">Project Conclusion</h3>
-  <div class="wrapper">
     <div class="block block-in">
       <p>
-        Despite we proposed the website to be designed base on a 12-col bootstrap grid system, lots of alterations were made as
-        client had different requirements on margins, lengths and visibility of contents 'above the fold' and expected the
-        display to retain the same across different screen dimensions. We also committed lots of responsive testings.
-        Flexibility is the key, after all.
+        The project was under a budget and restricted timeframe. We had to go on full speed from rapid prototyping to detailed
+        interactive prototyping as per client's requests.
+        Despite the agreements upon each milestone, lots of alterations were made as we went from low-fi to hi-fi wireframes to
+        interactive prototype to live site. Flexibility is the key, after all.
       </p>
     </div>
-  </div>
 </section>
 
 
@@ -223,24 +219,28 @@
 
 
 <section class="other-works">
-  <h2 class="block-in">Other Works</h2>
   <div class="work-tiles">
 
-    <div class="work-tile block-in come-in" >
+    <div class="work-tile block-in" >
       <div id="tile_schecker"></div>
       <a href="./scheckerIntro.html" class="tile-CTA">
         <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
+        <p>An <i class="i-innovative">innovative</i> Healthcare App</p>
       </a>
     </div>
 
-    <div class="work-tile block-in come-in">
+    <div class="work-tile block-in">
       <div id="tile_bardot"></div>
       <a href="./bardot.html" class="tile-CTA">
         <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
+        <p>A <i class="i-delicate">delicate</i> eCommerce Website</p>
       </a>
     </div>
 
   </div>
+
+  <a class="all-works-link block-in" href="./works.html"><h5>I've got more</h5></a>
+
 </section>
 
 
