--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -184,13 +184,13 @@
 
 
 <section class="other-works">
-  <h2 class="block-in">Other Works</h2>
   <div class="work-tiles">
 
     <div class="work-tile block-in come-in" >
       <div id="tile_bardot"></div>
       <a href="./bardot.html" class="tile-CTA">
         <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
+        <p>A <i class="i-delicate">delicate</i> eCommerce Website</p>
       </a>
     </div>
 
@@ -198,10 +198,13 @@
       <div id="tile_sa"></div>
       <a href="./sa.html" class="tile-CTA">
         <img alt="SA Logo" src="./Assets/logo_sa.png" />
+        <p>A fully <small style="font-weight:800;">cus</small><i class="i-customised">tOm<b>isEd</b></i> NGO's Website</p>
       </a>
     </div>
 
   </div>
+
+    <a class="all-works-link block-in" href="./works.html"><h5>I've got more</h5></a>
 </section>
 
 
