--- a/works.html
+++ b/works.html
@@ -60,83 +60,273 @@
 
 
 
-  <section class="other-works" id="all-works">
-    <h2 class="block-in">UX/UI Works</h2>
-    <div class="work-tiles">
+  <section class="all-works">
 
-      <div class="work-tile block-in" >
-        <div id="tile_schecker"></div>
-        <a href="./scheckerIntro.html" class="tile-CTA">
-          <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
-        </a>
+    <div class="tile-set" id="first-tile-set">
+      <div class="work-tiles">
+
+        <div class="work-tile block-in" >
+          <div id="tile_schecker"></div>
+          <a href="./scheckerIntro.html" class="tile-CTA">
+            <img alt="Bardot Logo" src="./Assets/Schecker_logo.png" />
+            <p>An <i class="i-innovative">innovative</i> Healthcare App</p>
+          </a>
+        </div>
+
+        <div class="work-tile block-in">
+          <div id="tile_bardot"></div>
+          <a href="./bardot.html" class="tile-CTA">
+            <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
+            <p>A <i class="i-delicate">delicate</i> eCommerce Website</p>
+          </a>
+        </div>
+
+        <div class="work-tile block-in">
+          <div id="tile_sa"></div>
+          <a href="./sa.html" class="tile-CTA">
+            <img alt="SA Logo" src="./Assets/logo_sa.png" />
+            <p>A fully <small style="font-weight:800;">cus</small><i class="i-customised">tOm<b>isEd</b></i> NGO's Website</p>
+          </a>
+        </div>
       </div>
 
-      <div class="work-tile block-in">
-        <div id="tile_bardot"></div>
-        <a href="./bardot.html" class="tile-CTA">
-          <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
-        </a>
-      </div>
+      <div class="work-tiles" id="first-tiles">
+        <div class="work-tile block-in" id="title-tile">
+          <h1 class="centered-text">A glimpse of my works</h1>
+        </div>
 
-      <div class="work-tile block-in">
-        <div id="tile_sa"></div>
-        <a href="./sa.html" class="tile-CTA">
-          <img alt="SA Logo" src="./Assets/logo_sa.png" />
-        </a>
+        <div class="work-tile block-in">
+          <div id="tile_rr"></div>
+          <a href="./rr.html" class="tile-CTA">
+            <img alt="SA Logo" src="./Assets/logo_rr.png" />
+            <p>A complex process <i class="i-simplified">simplified</i></p>
+          </a>
+        </div>
       </div>
 
     </div>
-  </section>
 
 
-  <section id="similar-prj">
-    <h4 class="block-in">Similar Projects</h4>
-    <div class="similar-prj-logos block-in">
-      <img class="small-logos" alt="Radio Rentals Logo" src="./Assets/logo_rr.png" />
-      <img class="small-logos" alt="Radio Rentals Logo" src="./Assets/logo_my7.png" />
-      <img class="small-logos" alt="Radio Rentals Logo" src="./Assets/logo_mjbale.png" />
-      <img class="small-logos" alt="Radio Rentals Logo" src="./Assets/logo_ss.png" />
+    <div class="tile-set">
+      <div class="work-tiles">
+
+        <div class="work-tile block-in" >
+          <div class="tile-desc">
+            <p>Coursework</p>
+            <h2>A 3D Animation</h2>
+          </div>
+
+          <a class="tile-CTA video-tile-CTA">
+            <i class="far fa-play-circle fa-5x fa-spin"></i>
+          </a>
+
+          <div class="video-lightbox">
+            <span class="close-video">
+              <i class="fas fa-times fa-2x"></i>
+            </span>
+            <video controls autoplay muted id="old-garlic-vid" class="tile-video">
+              <source src="./Assets/old-garlic.mov" type="video/mp4" />
+              Sorry it's a really nice video your browser failed to load.
+            </video>
+          </div>
+        </div>
+
+        <div class="work-tile block-in" >
+          <div class="tile-desc">
+            <p>Coursework</p>
+            <h2>A Cutout Animation</h2>
+          </div>
+
+          <a class="tile-CTA video-tile-CTA">
+            <i class="far fa-play-circle fa-5x fa-spin"></i>
+          </a>
+
+          <div class="video-lightbox">
+            <span class="close-video">
+              <i class="fas fa-times fa-2x"></i>
+            </span>
+            <video controls autoplay muted id="old-cutout-vid" class="tile-video">
+              <source src="./Assets/old-cutout.mov" type="video/mp4" />
+              Sorry it's a really nice video your browser failed to load.
+            </video>
+          </div>
+        </div>
+
+        <div class="work-tile block-in" >
+          <div class="tile-desc">
+            <p>Coursework</p>
+            <h2>A Stop-motion Animation</h2>
+          </div>
+
+          <a class="tile-CTA video-tile-CTA">
+            <i class="far fa-play-circle fa-5x fa-spin"></i>
+          </a>
+
+          <div class="video-lightbox">
+            <span class="close-video">
+              <i class="fas fa-times fa-2x"></i>
+            </span>
+            <video controls autoplay muted id="old-puppet-vid" class="tile-video">
+              <source src="./Assets/puppet.mov" type="video/mp4" />
+              Sorry it's a really nice video your browser failed to load.
+            </video>
+          </div>
+        </div>
+
+        <div class="work-tile block-in" >
+          <div class="tile-desc">
+            <p>Coursework</p>
+            <h2>A Morphing Animation</h2>
+          </div>
+
+          <a class="tile-CTA video-tile-CTA">
+            <i class="far fa-play-circle fa-5x fa-spin"></i>
+          </a>
+
+          <div class="video-lightbox">
+            <span class="close-video">
+              <i class="fas fa-times fa-2x"></i>
+            </span>
+            <video controls autoplay muted id="old-morphing-vid" class="tile-video">
+              <source src="./Assets/old-morphing.mov" type="video/mp4" />
+              Sorry it's a really nice video your browser failed to load.
+            </video>
+          </div>
+        </div>
+
+
+
+
+        <div class="work-tile block-in">
+          <div class="tile-desc">
+            <p>Coursework</p>
+            <h2>A Flash Animation</h2>
+          </div>
+
+          <a class="tile-CTA video-tile-CTA">
+            <i class="far fa-play-circle fa-5x fa-spin"></i>
+          </a>
+
+          <div class="video-lightbox">
+            <span class="close-video">
+              <i class="fas fa-times fa-2x"></i>
+            </span>
+            <video controls autoplay muted id="old-flash-vid" class="tile-video">
+              <source src="./Assets/old-titleSequence.mov" type="video/mp4" />
+              Sorry it's a really nice video your browser failed to load.
+            </video>
+          </div>
+        </div>
+
+        <div class="work-tile block-in">
+          <div id="tile_cdCover"></div>
+          <a class="tile-CTA">
+            <p>Conceptual artwork for an interactive CD Cover</p>
+          </a>
+        </div>
+
+        <div class="work-tile block-in">
+          <div id="tile_type-creature"></div>
+          <a class="tile-CTA">
+            <p>Another depiction of "Typeface"</p>
+            <small>A look into words, images, messages & meanings</small>
+          </a>
+        </div>
+
+
+
+        <div class="work-tile block-in">
+          <div id="tile_nabulio"></div>
+          <a class="tile-CTA">
+            <img alt="Nabulio Logo" src="./Assets/nabulio.png" />
+            <p>Logo Design for an exquisite handmade goods brand</p>
+          </a>
+        </div>
+
+      </div>
+   </div>
+
+
+
+   <!-- <div class="video-lightbox">
+
+
+
+
+     <video controls id="old-puppet-vid" class="block-in">
+       <source src="./Assets/puppet.mov" type="video/mp4" />
+       Sorry it's a really nice video your browser failed to load.
+     </video>
+
+     <div>
+       <video controls id="old-clay-vid" class="block-in">
+         <source src="./Assets/old-morphing.mov" type="video/mp4" />
+         Sorry it's a really nice video your browser failed to load.
+       </video>
+     </div>
+
+
+    <div>
+      <video controls id="old-garlic-vid" class="block-in">
+        <source src="./Assets/old-garlic.mov" type="video/mp4" />
+        Sorry it's a really nice video your browser failed to load.
+      </video>
     </div>
+
+
+     <div>
+       <video controls class="block-in">
+         <source src="./Assets/old-titleSequence.mov" type="video/mp4" />
+         Sorry it's a really nice video your browser failed to load.
+       </video>
+     </div>
+
+
+      <div>
+        <video controls class="block-in">
+          <source src="./Assets/old-titleSequence.mov" type="video/mp4" />
+          Sorry it's a really nice video your browser failed to load.
+        </video>
+      </div>
+
+
+     <div>
+       <video controls class="block-in">
+         <source src="./Assets/old-titleSequence.mov" type="video/mp4" />
+         Sorry it's a really nice video your browser failed to load.
+       </video>
+     </div>
+
+   </div> -->
+
+
   </section>
 
 
 
-<section class="other-works">
+
+
+<!-- <section class="other-works">
 
   <h2 class="block-in">Others</h2>
   <h5 class="block-in"><small>Graphic/Conceptual Artwork/Animations</small></h5>
 
   <div class="other-works-tiles">
     <div class="other-work-tile">
-      <video controls id="old-cutout-vid" class="block-in">
-        <source src="./Assets/old-cutout.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
 
-      <video controls id="old-puppet-vid" class="block-in">
-        <source src="./Assets/puppet.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
 
-      <video controls id="old-clay-vid" class="block-in">
-        <source src="./Assets/old-morphing.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
+
+
+
 
       <img alt="Type Creature" id="type-creature" class="block-in" src="./Assets/TypeCreature.png" />
 
     </div>
 
     <div class="other-work-tile">
-      <video controls id="old-garlic-vid" class="block-in">
-        <source src="./Assets/old-garlic.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
 
-      <video controls class="block-in">
-        <source src="./Assets/old-titleSequence.mov" type="video/mp4" />
-        Sorry it's a really nice video your browser failed to load.
-      </video>
+
+
 
       <img alt="poster" src="./Assets/poster.png" class="block-in"/>
     </div>
@@ -151,7 +341,7 @@
 
   </div>
 
-</section>
+</section> -->
 
 
 
