--- a/works.html
+++ b/works.html
@@ -239,7 +239,7 @@
           <div id="tile_nabulio"></div>
           <a class="tile-CTA">
             <img alt="Nabulio Logo" src="./Assets/nabulio.png" />
-            <p>Logo Design for an exquisite handmade goods brand</p>
+            <p>Logo Design for an exquisite handmade accessories brand</p>
           </a>
         </div>
 
