--- a/bardot.html
+++ b/bardot.html
@@ -109,9 +109,9 @@
       <p>
         'Search' function is one important part of an eCommerce website.
         The old search bar was visually unappealing and hard to find.
-        We re-designed it with trending items as a pre-suggestion because
-        psychologically speaking, we thought they would serve as 'hints'
-        to draw user's attention and would probably alter what they want to search for.
+        We re-designed it with trending items as a pre-suggestion since we wanted to take any opportunities to introduce these.
+        Psychologically speaking, we believed pre-suggestions would serve as 'hints'
+        to draw user's attention and probably alter their search intentions.
       </p>
     </div>
     <div class="block big-block no-text-block block-in">
