--- a/bardot.html
+++ b/bardot.html
@@ -93,7 +93,7 @@
   <h3>THE CHALLENGE</h3>
     <div class="block">
       <p>
-        As a dedicated eCommerce website,
+        As a delicate eCommerce website,
         the project required many micro interactions, functionalities and heavy mobile optimisation.
         We had to keep in mind all aspects during the design process, with the most challenging part being keeping the
         design elements (principles, product functionalities, client's requirements, etc.)
