--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <div class="prj-des-contents">
           <h3 class="schecker-in-out">Experimental project - Schecker</h3>
             <p class="schecker-in-out">
-              A not yet existent all-in-1 Healthcare Platform that accompanies you through&nbsp;sickness.
+              App conceptualisation & design - A Platform that uses AI to tackle health issues from the top down.
             </p>
           <!-- CTA -->
             <a class="CTA-button schecker-in-out" id="schecker-CTA" target="_blank" href="./scheckerIntro.html">
