--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -61,7 +61,7 @@
 
 
 
-<section class="project-intro">
+<section class="project-intro" id="schecker-hero-section">
   <div class="project-hero" id="schecker-hero">
     <img alt="Hero Image" src="./Assets/schecker-cover.png" />
   </div>
@@ -82,25 +82,48 @@
     </div>
       <div class="block">
         <p>
-          <span><a target="_blank" href="https://youtu.be/Vn_ZkI7-IZ4">Googling your symptoms</a></span> might not be a good idea.
-          This app will ease the <span><a target="_blank" href="https://www.google.com/search?q=cyberchondria">Cyberchondria</a></span>
-          with its smart algorithm to assess your inputs and provide possible causes rationally. Once done, it then allows you
-          to quickly book appointments with relevant physicians and track those symptoms altogether with their treatments/medication.
-          In short, it is NOT just another symptom checker.
+          This is an app that uses <strong>AI</strong> to assess symptoms just like a healthcare professional.
+          It also acts as a doctor booking platform and personal healthcare assistance to monitor and track symptoms and treatments.
+          In short, it helps people to stop <span><a target="_blank" href="https://youtu.be/Vn_ZkI7-IZ4"> googling symptoms</a></span>
+          and be free from <span><a target="_blank" href="https://www.google.com/search?q=cyberchondria">Cyberchondria</a></span>.
         </p>
       </div>
   </div>
 </section>
 
 
+<section id="schecker-explain">
+  <div class="wrapper big-col no-margin-top">
+    <h4>Why and How it works</h4>
+    <div class="block no-margin-top">
+      <p>
+        <strong>Why: </strong>a study found that 65% out of 2,000 polled people in the US googled their symptoms
+        <span><small><i>(<a href="https://www.letsgetchecked.com">LetsGetChecked</a>'s survey stated in
+        <a href="https://bit.ly/2Cg9RyF">phillyvoice's article</a>)</i></small></span>. And that is only a small fraction of
+        the population in the US alone. Self-diagnosis is definitely not encouraged, that is why people should and deserve to better
+        understand their health issues.
 
+        <br /><br />
 
+        <strong>How: </strong>Symptom checker is not a new concept with many webs/apps currently available in the market. However,
+        their accuracy is questionable <span><small><i>(<a href="https://bit.ly/38AYL3n">sciencealert</a>)</i></small></span>.
+        Most of those symptom checkers work like a search engine that pairs the inputted symptom(s) with their matching
+        conditions while failing to 'think' as a doctor. Schecker's algorithm assesses the symptoms the way a physician would.
+        Its database contains all information of the conditions, the symptoms they cause, together with all surrounding
+        factors that could lead to such symptoms. The AI analyses the user's inputs and info
+        (medical history, gender, age, diets, etc.) to asks relevant/rational corresponding questions and seek for the link(s)
+        between those and matching conditions to filters out results.
+      </p>
+    </div>
+  </div>
+</section>
+
+<div class="leading-line" id="schecker-leading-line_1"></div>
 
 
 <section id="schecker-hiw-section">
 
   <h3>MAIN FEATURES</h3>
-  <div class="leading-line"></div>
 
   <div class="wrapper" id="schecker-features">
     <div class="ic_schecker-feature" id="ic_check">
@@ -115,32 +138,31 @@
   </div>
 </section>
 
+<div class="leading-line" id="schecker-leading-line_2"></div>
+
 <section id="concept-development">
   <h3>CONCEPT DEVELOPMENT</h3>
-  <div class="leading-line" id="s_leading-line-1"></div>
 
-  <div class="big-img-wrapper" id="s_concept-flow">
+  <div class="wrapper big-col" id="s_concept-flow">
     <h5 id="s_concept-flow-h5">Initial Concept Flow</h5>
     <img id="s_concept-flow-img" alt="concept flow" class="block-in noShadow-img" src="./Assets/schecker-simplifiedFlow.png" />
   </div>
 
-  <div class="leading-line" id="s_leading-line-2"></div>
 
-  <div class="big-img-wrapper" id="s_wireframe">
+
+  <div class="wrapper big-col" id="s_wireframe">
     <h5 id="s_wireframe-h5">Low-fi Wireframe</h5>
     <img id="s_wireframe-img" alt="wireframe" class="block-in noShadow-img" src="./Assets/schecker-wireframe.png" />
   </div>
 
-  <div class="leading-line" id="s_leading-line-3"></div>
 
   <div id="schecker-draggable-flow" >
     <h5 class="secondary-title">User Flow<br /><small>(drag to view)</small></h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-userflow.png" />
   </div>
 
-  <div class="leading-line" id="s_leading-line-4"></div>
 
-  <div class="big-img-wrapper" id="s_ui">
+  <div class="wrapper big-col" id="s_ui">
     <h5 >UI Components</h5>
     <img alt="UI Components" class="noShadow-img block-in" src="./Assets/schecker-uiComponents.png" />
   </div>
@@ -186,7 +208,7 @@
 <section class="other-works">
   <div class="work-tiles">
 
-    <div class="work-tile block-in come-in" >
+    <div class="work-tile block-in" >
       <div id="tile_bardot"></div>
       <a href="./bardot.html" class="tile-CTA">
         <img alt="Bardot Logo" src="./Assets/logo_bardot.png" />
@@ -194,7 +216,7 @@
       </a>
     </div>
 
-    <div class="work-tile block-in come-in">
+    <div class="work-tile block-in">
       <div id="tile_sa"></div>
       <a href="./sa.html" class="tile-CTA">
         <img alt="SA Logo" src="./Assets/logo_sa.png" />
