--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -84,8 +84,10 @@
         <p>
           This is an app that uses <strong>AI</strong> to assess symptoms just like a healthcare professional.
           It also acts as a doctor booking platform and personal healthcare assistance to monitor and track symptoms and treatments.
-          In short, it helps people to stop <span><a target="_blank" href="https://youtu.be/Vn_ZkI7-IZ4"> googling symptoms</a></span>
-          and be free from <span><a target="_blank" href="https://www.google.com/search?q=cyberchondria">Cyberchondria</a></span>.
+          The ambition of this platform is to educate the general public about health issues and connect them with healthcare
+          professionals in a streamlined process. I believe that the more medical knowledge people have, the less
+          likely they are to ignore or self-treat a symptom. Especially in developing countries where the healthcare systems are not
+          yet so advanced.
         </p>
       </div>
   </div>
