--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -112,8 +112,8 @@
         conditions while failing to 'think' as a doctor. Schecker's algorithm assesses the symptoms the way a physician would.
         Its database contains all information of the conditions, the symptoms they cause, together with all surrounding
         factors that could lead to such symptoms. The AI analyses the user's inputs and info
-        (medical history, gender, age, diets, etc.) to asks relevant/rational corresponding questions and seek for the link(s)
-        between those and matching conditions to filters out results.
+        (medical history, gender, age, diets, etc.) to asks relevant/rational corresponding questions and seek the link(s)
+        between those and matching conditions to filter out results.
       </p>
     </div>
   </div>
