added more works section to home

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
   <a href="#prj-schecker" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#prj-bardot" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#prj-sa" class="bullet" rel="m_PageScroll2id"></a>
+  <a href="#more-works" class="bullet" rel="m_PageScroll2id"></a>
   <a href="#contact-me" class="bullet" rel="m_PageScroll2id"></a>
 </div>
 
@@ -104,9 +105,7 @@
 <!-- Homepage Intro Section -->
 <section class="flex-row" id="home-intro">
 
-
   <h1 id="intro_text">Howdy, <br /> welcome! </h1>
-
 
     <!-- CTA arrow for next page -->
     <a class="CTAarrow arrow-down" id="home-CTAarrow" href="#home-intro_2" rel="m_PageScroll2id">
@@ -128,19 +127,16 @@
 
 
 <section class="flex-column" id="home-intro_2">
-
-
     <h2 class="centered-text intro2-in-out">
         I do UX/UI, <br />
-        focusing on Product Design.
+        working hard to advance the career.
     </h2>
 
     <p class="centered-text intro2-in-out" style="font-weight:400; font-size: 1em !important; letter-spacing: .1em;">
       <i>
-        - I believe in ideas and things that make sense -
+        - I love ideas and believe in things that make sense -
         </i>
     </p>
-
 </section>
 
 
@@ -232,6 +228,10 @@
 </section>
 
 
+<section class="flex-column" id="more-works">
+  <a href="./works.html" target="_blank"><h5>More Works</h5></a>
+</section>
+
 
 
 
@@ -241,7 +241,7 @@
     Social Media isn't my cup of coffee.<br />
     If you'd like to find me, <br />
     <a id="home-mailto" target="_blank"
-    href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut">drop me a line</a> and we will see.
+    href="mailto:nhuthoangdon@gmail.com?Subject=Got%20you%20an%20Offer&Body=Hey%20Nhut">drop me a line</a> and we shall see.
   </p>
 
   <?xml version="1.0" encoding="UTF-8"?>
