--- a/rr.html
+++ b/rr.html
@@ -172,7 +172,7 @@
 
   </div>
 
-  <a class="all-works-link block-in" href="./works.html"><h5>I've got more</h5></a>
+  <a class="all-works-link block-in" href="./works.html"><h5>More Works</h5></a>
 </section>
 
 
