schecker wording & sa mockup

--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -84,9 +84,9 @@
           This is an app that uses <strong>AI</strong> to assess symptoms just like a healthcare professional.
           It also acts as a doctor booking platform and personal healthcare assistance to monitor and track symptoms and treatments.
           The ambition of this platform is to educate the general public about health issues and connect them with healthcare
-          professionals in a streamlined process. I believe that the more medical knowledge people have, the less
-          likely they are to ignore or self-treat a symptom. Especially in developing countries where the healthcare systems are not
-          yet so advanced.
+          professionals in a streamlined process. The more knowledge people have, the less likely they are to ignore or
+          self-treat a symptom. Especially in developing countries where the healthcare systems are not
+          yet so advanced and prescription drugs not properly regulated.
         </p>
       </div>
   </div>
@@ -145,7 +145,7 @@
   <h3>CONCEPT DEVELOPMENT</h3>
 
   <div class="wrapper big-col" id="s_concept-flow">
-    <h5 id="s_concept-flow-h5">Initial Concept Flow</h5>
+    <h5 id="s_concept-flow-h5">Simple Concept Flow</h5>
     <img id="s_concept-flow-img" alt="concept flow" class="block-in noShadow-img" src="./Assets/schecker-simplifiedFlow.png" />
   </div>
 
@@ -158,7 +158,7 @@
 
 
   <div id="schecker-draggable-flow" >
-    <h5 class="secondary-title">User Flow<br /><small>(drag to view)</small></h5>
+    <h5 class="secondary-title">App Flow<br /><small>(drag to view)</small></h5>
     <img alt="user flow" id="schecker-userFlow" src="./Assets/schecker-userflow.png" />
   </div>
 
