--- a/scheckerIntro.html
+++ b/scheckerIntro.html
@@ -81,12 +81,12 @@
     </div>
       <div class="block">
         <p>
-          This is an app that uses <strong>AI</strong> to assess symptoms just like a healthcare professional.
-          It also acts as a doctor booking platform and personal healthcare assistance to monitor and track symptoms and treatments.
+          <strong>AI</strong> has been integrated in more and more walks of life, including the healthcare industry.
+          The idea of this app is to tackle the self-diagnosing problem in patients, act as a bridge between patients and their
+          doctors, as well as aiding in the management of a condition.
+
           The ambition of this platform is to educate the general public about health issues and connect them with healthcare
-          professionals in a streamlined process. The more knowledge people have, the less likely they are to ignore or
-          self-treat a symptom. Especially in developing countries where the healthcare systems are not
-          yet so advanced and prescription drugs not properly regulated.
+          professionals in a streamlined process.
         </p>
       </div>
   </div>
@@ -101,8 +101,10 @@
         <strong>Why: </strong>a study found that 65% out of 2,000 polled people in the US googled their symptoms
         <span><small><i>(<a href="https://www.letsgetchecked.com">LetsGetChecked</a>'s survey stated in
         <a href="https://bit.ly/2Cg9RyF">phillyvoice's article</a>)</i></small></span>. And that is only a small fraction of
-        the population in the US alone. Self-diagnosis is definitely not encouraged, that is why people should and deserve to better
-        understand their health issues.
+        the population in the US alone. The number must be much higher in developing countries where the healthcare systems are
+        not yet so advanced and prescription drugs not properly regulated.
+        Self-diagnosis is definitely not encouraged, that is why people should and deserve to better
+        understand of their health issues.
 
         <br /><br />
 
@@ -124,7 +126,7 @@
 
 <section id="schecker-hiw-section">
 
-  <h3>MAIN FEATURES</h3>
+  <h3>In short, it</h3>
 
   <div class="wrapper" id="schecker-features">
     <div class="ic_schecker-feature" id="ic_check">
@@ -145,7 +147,7 @@
   <h3>CONCEPT DEVELOPMENT</h3>
 
   <div class="wrapper big-col" id="s_concept-flow">
-    <h5 id="s_concept-flow-h5">Simple Concept Flow</h5>
+    <h5 id="s_concept-flow-h5">Simple Flow</h5>
     <img id="s_concept-flow-img" alt="concept flow" class="block-in noShadow-img" src="./Assets/schecker-simplifiedFlow.png" />
   </div>
 
